Resizing plots, fixed labels

--- a/code/inter-compartmental interactions_abratio.Rmd
+++ b/code/inter-compartmental interactions_abratio.Rmd
@@ -175,7 +175,7 @@ df %>% filter(cohort=="Cohort 1" & compartment %in% c("I")) %>% mutate(ab_ratio_
   summarize(ab_ratio_oe=mean(ab_ratio_oe, na.rm=TRUE)) %>%
   ggplot(aes(type, ab_ratio_oe, fill=type)) + geom_jitter(aes(color=type), size=2) + geom_boxplot(alpha=0.1, aes(color=type), outlier.colour = NA)  + facet_wrap(~compartment, nrow=1, scales="free_y") + theme_bw() +scaleFill + ylab("Log2 A/B Interaction Ratio (O/E)") + theme(legend.position = "none") + 
   scaleCol + xlab("") + theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
-ggsave("../plots/abratio_oe_normal_tumor_one_point_per_sample_comp_i_cohort1.png", width=2.5, height=3)
+ggsave("../plots/abratio_oe_normal_tumor_one_point_per_sample_comp_i_cohort1.png", width=1.6, height=3)
 
 # Compartment I O/E - Cohort 2
 set.seed(124)
@@ -184,7 +184,7 @@ df %>% filter(cohort=="Cohort 2" & compartment %in% c("I")) %>% mutate(ab_ratio_
   summarize(ab_ratio_oe=mean(ab_ratio_oe, na.rm=TRUE)) %>%
   ggplot(aes(type, ab_ratio_oe, fill=type)) + geom_jitter(aes(color=type), size=2) + geom_boxplot(alpha=0.1, aes(color=type), outlier.colour = NA)  + facet_wrap(~compartment, nrow=1, scales="free_y") + theme_bw() +scaleFill + ylab("Log2 A/B Interaction Ratio (O/E)") + theme(legend.position = "none") + 
   scaleCol + xlab("") + theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
-ggsave("../plots/abratio_oe_normal_tumor_one_point_per_sample_comp_i_cohort2.png", width=2.5, height=3)
+ggsave("../plots/abratio_oe_normal_tumor_one_point_per_sample_comp_i_cohort2.png", width=1.6, height=3)
 
 ```
 
@@ -234,7 +234,10 @@ coeff_i <- fixef(fit) %>% enframe() %>% cbind(confint(fit)[names(fixef(fit)),], 
 
 coeff <- rbind(coeff_b, coeff_i)
 coeff$compartment <- factor(coeff$compartment, levels=c("I", "B"))
-coeff %>% filter(grepl("hypomethylation_bin", name))%>% mutate(name = sub("hypomethylation_bin", "", name)) %>% ggplot(aes(name, value, color=compartment)) + geom_point(size=4) + geom_errorbar(aes(ymin=`2.5 %`, ymax=`97.5 %`, color=compartment), size=2) + scaleCompCol + theme_bw()+ xlab("Hypomethylation") + ylab("A/B Ratio Difference") + geom_hline(yintercept = 0, linetype=2) + facet_wrap(~compartment) + theme(legend.position = "none") + theme(text = element_text(size=18), axis.text.x = element_text(angle = 90, hjust=1)) + theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
+coeff <- coeff %>% filter(grepl("hypomethylation_bin", name))%>% mutate(name = sub("hypomethylation_bin", "", name)) 
+coeff$name <- factor(coeff$name, levels=unique(coeff$name))
+  
+coeff <- ggplot(aes(name, value, color=compartment)) + geom_point(size=4) + geom_errorbar(aes(ymin=`2.5 %`, ymax=`97.5 %`, color=compartment), size=2) + scaleCompCol + theme_bw()+ xlab("Hypomethylation") + ylab("A/B Ratio Difference") + geom_hline(yintercept = 0, linetype=2) + facet_wrap(~compartment) + theme(legend.position = "none") + theme(text = element_text(size=18), axis.text.x = element_text(angle = 90, hjust=1)) + theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank())
 ggsave("../plots/abratio_oe_by_hypomethylation_relative_to_minimally_hypometh_tumor.png", width=7, height=4)
 ```
 
